Updated pages sites

--- a/pages/config.toml
+++ b/pages/config.toml
@@ -1,3 +1,4 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = 'https://emoji-link.net/'
+languageCode = 'en-gb'
+title = 'URL shortner using emojis'
+theme = 'emoji'
