--- a/pages/package.json
+++ b/pages/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue3-clipboard": "^1.0.0",
     "wave-ui": "^2.23.0"
   },
   "devDependencies": {
