Everything seems to be working

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -2,7 +2,7 @@ name = "emoji-link-api"
 type = "webpack"
 
 account_id = "97836032ba6aea7b7dde9d22aee525e5"
-workers_dev = true
+workers_dev = false
 route = "emoji-link.net/*"
 zone_id = "3dc7a1d7b8b504b3253a8e57015aeea6"
 
