--- a/pages/package.json
+++ b/pages/package.json
@@ -1,13 +1,14 @@
 {
   "name": "emoji-linker-pages",
   "version": "1.0.0",
-  "private": true,  "homepage": "https://emoji-link.net",
+  "private": true,
+  "license": "ISC",
+  "homepage": "https://emoji-link.net",
   "author": {
     "name": "Luke Nelson",
     "email": "hello@lukenelson.uk",
     "url": "https://LukeNelson.uk"
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/luc122c/emoji-link.git",
