--- a/pages/package.json
+++ b/pages/package.json
@@ -33,14 +33,15 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.0-beta.4",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-eslint": "^5.0.0-beta.4",
     "@vue/cli-plugin-unit-jest": "^5.0.0-beta.4",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.2.9",
     "@vue/test-utils": "^2.0.0-rc.14",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.18.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
+    "jest": "^27.1.0",
     "typescript": "~4.4.2",
     "vue-jest": "^5.0.0-alpha.10"
   },
