--- a/pages/package.json
+++ b/pages/package.json
@@ -32,6 +32,7 @@
     "wave-ui": "^2.23.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.8",
     "@vue/cli-plugin-babel": "^5.0.0-beta.4",
     "@vue/cli-plugin-eslint": "^5.0.0-beta.4",
     "@vue/cli-plugin-unit-jest": "^5.0.0-beta.4",
@@ -40,7 +41,6 @@
     "@vue/compiler-sfc": "^3.2.9",
     "@vue/test-utils": "^2.0.0-rc.15",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
-    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.0.0-beta.4",
     "jest": "^27.1.0",
