Remove warnings about non-default exports.

--- a/pages/package.json
+++ b/pages/package.json
@@ -56,7 +56,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {},
     "overrides": [
