--- a/pages/package.json
+++ b/pages/package.json
@@ -33,18 +33,18 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
-    "@vue/cli-plugin-babel": "^5.0.0-beta.4",
+    "@vue/cli-plugin-babel": "^5.0.0-beta.6",
     "@vue/cli-plugin-eslint": "^5.0.0-beta.4",
     "@vue/cli-plugin-unit-jest": "^5.0.0-beta.4",
     "@vue/cli-service": "^5.0.0-beta.4",
     "@vue/cli-test-utils": "^5.0.0-beta.4",
     "@vue/compiler-sfc": "^3.2.9",
-    "@vue/test-utils": "^2.0.0-rc.15",
+    "@vue/test-utils": "^2.0.0-rc.16",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.0.0-beta.4",
     "jest": "^27.1.0",
-    "typescript": "~4.4.2"
+    "typescript": "^4.4.4"
   },
   "eslintConfig": {
     "root": true,
