--- a/pages/package.json
+++ b/pages/package.json
@@ -28,17 +28,17 @@
   "dependencies": {
     "axios": "^0.23.0",
     "core-js": "^3.18.0",
-    "vue": "^3.2.12",
+    "vue": "^3.2.23",
     "wave-ui": "^2.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.15.8",
-    "@vue/cli-plugin-babel": "^5.0.0-beta.6",
-    "@vue/cli-plugin-eslint": "^5.0.0-beta.4",
-    "@vue/cli-plugin-unit-jest": "^5.0.0-beta.4",
-    "@vue/cli-service": "^5.0.0-beta.4",
-    "@vue/cli-test-utils": "^5.0.0-beta.4",
+    "@vue/cli-plugin-babel": "^5.0.0-rc.1",
+    "@vue/cli-plugin-eslint": "^5.0.0-rc.1",
+    "@vue/cli-plugin-unit-jest": "^5.0.0-rc.1",
+    "@vue/cli-service": "^5.0.0-rc.1",
+    "@vue/cli-test-utils": "^5.0.0-rc.1",
     "@vue/compiler-sfc": "^3.2.9",
     "@vue/test-utils": "^2.0.0-rc.16",
     "@vue/vue3-jest": "^27.0.0-alpha.3",
