--- a/pages/package.json
+++ b/pages/package.json
@@ -26,25 +26,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.23.0",
-    "core-js": "^3.18.0",
-    "vue": "^3.2.23",
-    "wave-ui": "^2.23.0"
+    "axios": "^0.26.0",
+    "core-js": "^3.21.1",
+    "vue": "^3.2.31",
+    "wave-ui": "^2.31.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.15.8",
-    "@vue/cli-plugin-babel": "^5.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "^5.0.0-rc.1",
-    "@vue/cli-plugin-unit-jest": "^5.0.0-rc.1",
-    "@vue/cli-service": "^5.0.0-rc.1",
-    "@vue/cli-test-utils": "^5.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.2.9",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "@vue/vue3-jest": "^27.0.0-alpha.3",
-    "babel-jest": "^27.3.1",
-    "eslint": "^8.0.1",
-    "eslint-plugin-vue": "^7.0.0-beta.4",
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-plugin-unit-jest": "^5.0.1",
+    "@vue/cli-service": "^5.0.1",
+    "@vue/cli-test-utils": "^5.0.1",
+    "@vue/compiler-sfc": "^3.2.31",
+    "@vue/test-utils": "2.0.0-rc.17",
+    "@vue/vue3-jest": "27.0.0-alpha.4",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.10.0",
+    "eslint-plugin-vue": "^8.5.0",
     "jest": "^27.1.0",
     "typescript": "^4.4.4"
   },
